conditions.Conditions.scala.error
Erreur de compilation :
Conditions:1: error: illegal start of simple expression
if ( est face au mur() ); 
                        ^Conditions:3: error: ';' expected but 'else' found.
else;
^