conditions.Conditions.scala.code
if ( est face au mur() ); 
	recule()
else;
	avance()